# Mandelbrot

./: .gitignore  README.md  environment.yml  mandelbrot.py  settings.py  setup.cfg
.github/workflows/: build.yml  build_test_deploy.yml
conda-recipe/: bld.bat  conda_build_config.yaml  meta.yaml
mandelbrot_demo/: __init__.py  mandelbrot.py
mandelbrot_demo/impl/: arg_parser.py  impl_dpnp.py  impl_numba.py  impl_numba_dpex.py  impl_numba_dpex_kernel.py  impl_numpy.py  impl_versioner.py  settings.py  visualization.py
mandelbrot_demo/tests/: test_dpnp.py  test_numba.py  test_numba_dpex.py  test_numpy.py
