[versioneer]
VCS = git
style = pep440

[aliases]
test=pytest

[metadata]
name = game-of-life-demo
version = 0.1.0
author = samaid
author_email = pycoddiy@gmail.com
url = https://github.com/samaid/game-of-life
description = Mandelbrot Set demo implemented with numpy, numba, dpnp, numba-dpex
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords = example, demo, numba, numpy, numba-dpex, dpnp, mandelbrot
license = BSD 2-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    numpy
    numba
    numba-dpex
    dpnp

[options.extras_require]
dev =
    black==23.1.1
    flake8==6.0.0

[options.package_data]
* = README.md

[options.entry_points]
console_scripts =
    mandelbrot =mandelbrot_demo.mandelbrot:main
